Creating single message from Session trigger.

--- a/SessionIDHandleAPI/Web.config
+++ b/SessionIDHandleAPI/Web.config
@@ -5,8 +5,10 @@
   -->
 <configuration>
   <appSettings>
-    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[youraccount].servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=[yourkeyhere]" />
-    <add key="QueueName" value="[your queue]" />
+    <!--add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[youraccount].servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=[yourkeyhere]" /-->
+    <!--add key="QueueName" value="[your queue]" /-->
+    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://wsazureresearch.servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=/Kmf9yfuSSsV3CQ9XqqQfQYPCL359xOZjUZ2tUnMv/w=" />
+    <add key="QueueName" value="longlockresearch" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
