--- a/ServiceBusSenderClient/App.config
+++ b/ServiceBusSenderClient/App.config
@@ -48,6 +48,6 @@
     <!-- Service Bus specific app setings for messaging connections -->
     <add key="Microsoft.ServiceBus.ConnectionString"
         value="Endpoint=sb://wsazureresearch.servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=/Kmf9yfuSSsV3CQ9XqqQfQYPCL359xOZjUZ2tUnMv/w="/>
-    <add key="QueueName" value="SessionIDSample"/>
+    <add key="QueueName" value="longlockresearch"/>
   </appSettings>
 </configuration>
