Adding session state

--- a/ServiceBusSenderClient/App.config
+++ b/ServiceBusSenderClient/App.config
@@ -46,8 +46,7 @@
   </system.serviceModel>
   <appSettings>
     <!-- Service Bus specific app setings for messaging connections -->
-    <add key="Microsoft.ServiceBus.ConnectionString"
-        value="Endpoint=sb://wsazureresearch.servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=/Kmf9yfuSSsV3CQ9XqqQfQYPCL359xOZjUZ2tUnMv/w="/>
-    <add key="QueueName" value="longlockresearch"/>
+    <!--add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[youraccount].servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=[yourkeyhere]" /-->
+    <!--add key="QueueName" value="[your queue]" /-->
   </appSettings>
 </configuration>
