--- a/SessionIDHandleAPI/SessionIDHandleAPI.csproj
+++ b/SessionIDHandleAPI/SessionIDHandleAPI.csproj
@@ -139,7 +139,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\ThirdPartyPayloads\ThirdPartyPayloads.csproj">
+      <Project>{b68d03c5-b2b2-4767-ab8d-ccc42cddf448}</Project>
+      <Name>ThirdPartyPayloads</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
