--- a/ServiceBusSenderClient/App.config
+++ b/ServiceBusSenderClient/App.config
@@ -48,5 +48,8 @@
     <!-- Service Bus specific app setings for messaging connections -->
     <!--add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[youraccount].servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=[yourkeyhere]" /-->
     <!--add key="QueueName" value="[your queue]" /-->
+    <add key="Microsoft.ServiceBus.ConnectionString"
+       value="Endpoint=sb://wsazureresearch.servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=/Kmf9yfuSSsV3CQ9XqqQfQYPCL359xOZjUZ2tUnMv/w="/>
+    <add key="QueueName" value="sessionidsample"/>   
   </appSettings>
 </configuration>
