--- a/SessionIDHandleAPI/Web.config
+++ b/SessionIDHandleAPI/Web.config
@@ -4,12 +4,8 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-  <appSettings>
-    <!--add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[youraccount].servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=[yourkeyhere]" /-->
-    <!--add key="QueueName" value="[your queue]" /-->
-    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://wsazureresearch.servicebus.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=/Kmf9yfuSSsV3CQ9XqqQfQYPCL359xOZjUZ2tUnMv/w=" />
-    <add key="QueueName" value="sessionidsample" />
-  </appSettings>
+  <appSettings configSource="keys.config"></appSettings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -26,7 +22,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -35,6 +31,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.20622.1351" newVersion="4.0.20622.1351" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
