--- a/SessionIDHandleAPI/packages.config
+++ b/SessionIDHandleAPI/packages.config
@@ -6,13 +6,13 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Azure.AppService.ApiApps.Service" version="0.9.64" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
-  <package id="Swashbuckle" version="5.0.0" targetFramework="net452" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="Swashbuckle" version="5.2.1" targetFramework="net452" />
   <package id="Swashbuckle.Core" version="5.2.1" targetFramework="net452" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net452" />
   <package id="TRex" version="0.1.7.0" targetFramework="net452" />
   <package id="TRex.Metadata.Attributes" version="0.1.7.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net452" />
-  <package id="WindowsAzure.ServiceBus" version="3.0.2" targetFramework="net452" />
+  <package id="WindowsAzure.ServiceBus" version="3.0.3" targetFramework="net452" />
 </packages>
