Aligning the code.

--- a/SessionIDHandleAPI/SessionIDHandleAPI.csproj
+++ b/SessionIDHandleAPI/SessionIDHandleAPI.csproj
@@ -123,6 +123,7 @@
   <ItemGroup>
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\ServiceBusTopicController.cs" />
     <Compile Include="Controllers\SessionIDHandlerController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
